--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "mongoose": "^5.4.17",
+    "mongoose-sequence": "^5.0.1",
     "nodemon": "^1.18.9"
   }
 }
